--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,4 +1,20 @@
-/* write your override styles here */
 #wall .tag-1 {
+    display: none;
+}
+body > #wall > #tag-2 {
+    display: none;
+}
+body #wall #tag-3 .slick{
+    display: none;
+}
+#wall .class #tag-5 .slick {
+    position: relative;
+    top:8px;
+    left: 8px;
+    width: auto;
+    height: 622px;
+    display: none;
+}
+body > #wall > #tag-4 {
     display: none;
 }
